--- a/landing/index.html
+++ b/landing/index.html
@@ -15,8 +15,7 @@
   <link href="css/style.css" rel="stylesheet">
 
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,600' rel='stylesheet' type='text/css'>
-
-  <!--[if lt IE 9]>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">  <!--[if lt IE 9]>
   <script src="js/html5shiv.js"></script>
   <script src="js/respond.min.js"></script>
 <![endif]-->
@@ -31,7 +30,9 @@
 
   <main id="top" class="masthead" role="main">
     <div class="container">
-
+      <a href="https://wa.link/1vt66u" class="float" target="_blank">
+        <i class="fa fa-whatsapp my-float"></i>
+        </a>
       <!-- <div class="logo"> <a href="#"><img src="images/readymade_logo.png" alt="readymade-logo"></a> </div> -->
 
       <h1 class="main-title">Earn up to $500 to $2000 per month in Nigeria with just your phone</h1>
@@ -80,7 +81,7 @@
         <h4>Look at the results from me and my students </h4>
       </div>
       <section class="row breath">
-        <div class="col-md-6">
+        <div class="col-md-4">
           <div class="testblock">
             <img src="images/testi-1.png" width="100%" alt=".">
           </div>
@@ -89,9 +90,18 @@
               Founder and CEO of <a href="#">Company Inc</a></p>
           </div> -->
         </div>
-        <div class="col-md-6">
+        <div class="col-md-4">
           <div class="testblock">
             <img src="images/testi-2.png" width="100%" alt=".">
+          </div>
+                    <!-- <div class="clientblock"> <img src="images/testimonial_2.png" alt=".">
+            <p><strong>Michael Slats</strong> <br>
+              Project Lead at <a href="#">Envato.com</a></p>
+          </div> -->
+        </div>
+        <div class="col-md-4">
+          <div class="testblock">
+            <img src="images/testi-3.jpeg" width="100%" alt=".">
           </div>
                     <!-- <div class="clientblock"> <img src="images/testimonial_2.png" alt=".">
             <p><strong>Michael Slats</strong> <br>
@@ -142,6 +152,7 @@
       <div class="section-title">
         <h2>Secure Your Spot</h2>
         <h4>Join hundreds of people that are already seeing results.</h4>
+        <p><strong><em>Price may increase to ₦30,000 any time.</em></strong></p>
       </div>
       <div class="row">
         <div class="col-md-12 text-center"> <a href="https://sprl.in/dgCpLyn" class="btn btn-warning btn-lg gototop">GET INSTANT ACCESS</a>
