--- a/landing/index.html
+++ b/landing/index.html
@@ -5,8 +5,8 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description"
-    content="Startup Responsive Landing page Template for startup, web services, newsletter signup, lead generation etc..">
+  <meta name="keywords" content="Affiliate marketing course, AIM Course, online prosperity, passive income, affiliate marketing secrets, AIM revolution, digital entrepreneurship, online success, earn money online, affiliate marketing mastery">
+  <meta name="description" content="Unlock the potential of affiliate marketing with the Automated Income Machine (AIM) Course! Join the AIM revolution and learn the secrets to passive income and online prosperity. Enroll now to AIM high and elevate your earnings today!">
   <title>Become a Digital Entrepreneur: AIM Course and Mentorship Await! - Amaka Mentorship</title>
 
   <script src="../../cdn-cgi/apps/head/OkbNSnEV_PNHTKP2_EYPrFNyZ8Q.js"></script>
