--- a/landing/index.html
+++ b/landing/index.html
@@ -53,7 +53,20 @@
 
   </main>
 
+  <main class="footercta" role="main">
+    <div class="container">
 
+      <div class="section-title">
+        <h2>Secure Your Spot</h2>
+        <h4>Join hundreds of people that are already seeing results.</h4>
+        <p><strong><em>Price may increase to ₦30,000 any time.</em></strong></p>
+      </div>
+      <div class="row">
+        <div class="col-md-12 text-center"> <a href="https://sprl.in/dgCpLyn" class="btn btn-warning btn-lg gototop">GET INSTANT ACCESS</a>
+        </div>
+      </div>
+    </div>
+  </main>
   <div class="container" id="explore">
 
     <div class="section-title">
@@ -83,7 +96,7 @@
       <section class="row breath">
         <div class="col-md-4">
           <div class="testblock">
-            <img src="images/testi-1.png" width="100%" alt=".">
+            <img src="images/testi-10.jpeg" width="100%" alt=".">
           </div>
           <!-- <div class="clientblock"> <img src="images/testimonial_1.png" alt=".">
             <p><strong>Johnathan Doe</strong> <br>
@@ -92,7 +105,7 @@
         </div>
         <div class="col-md-4">
           <div class="testblock">
-            <img src="images/testi-2.png" width="100%" alt=".">
+            <img src="images/testi-9.jpeg" width="100%" alt=".">
           </div>
                     <!-- <div class="clientblock"> <img src="images/testimonial_2.png" alt=".">
             <p><strong>Michael Slats</strong> <br>
@@ -102,6 +115,42 @@
         <div class="col-md-4">
           <div class="testblock">
             <img src="images/testi-3.jpeg" width="100%" alt=".">
+          </div>
+                    <!-- <div class="clientblock"> <img src="images/testimonial_2.png" alt=".">
+            <p><strong>Michael Slats</strong> <br>
+              Project Lead at <a href="#">Envato.com</a></p>
+          </div> -->
+        </div>
+      </section>
+
+
+
+    </div>
+    <div class="container">
+
+
+      <section class="row breath">
+        <div class="col-md-4">
+          <div class="testblock">
+            <img src="images/testi-5.jpeg" align="center" height="100%" alt=".">
+          </div>
+          <!-- <div class="clientblock"> <img src="images/testimonial_1.png" alt=".">
+            <p><strong>Johnathan Doe</strong> <br>
+              Founder and CEO of <a href="#">Company Inc</a></p>
+          </div> -->
+        </div>
+        <div class="col-md-4">
+          <div class="testblock">
+            <img src="images/testi-8.jpeg" width="100%" alt=".">
+          </div>
+                    <!-- <div class="clientblock"> <img src="images/testimonial_2.png" alt=".">
+            <p><strong>Michael Slats</strong> <br>
+              Project Lead at <a href="#">Envato.com</a></p>
+          </div> -->
+        </div>
+        <div class="col-md-4">
+          <div class="testblock">
+            <img src="images/testi-7.jpeg" width="100%" alt=".">
           </div>
                     <!-- <div class="clientblock"> <img src="images/testimonial_2.png" alt=".">
             <p><strong>Michael Slats</strong> <br>
