--- a/landing/index.html
+++ b/landing/index.html
@@ -105,7 +105,7 @@
         </div>
         <div class="col-md-4">
           <div class="testblock">
-            <img src="images/testi-9.jpeg" width="100%" alt=".">
+            <img src="images/testi-9.jpeg" height="100%" alt=".">
           </div>
                     <!-- <div class="clientblock"> <img src="images/testimonial_2.png" alt=".">
             <p><strong>Michael Slats</strong> <br>
@@ -132,7 +132,7 @@
       <section class="row breath">
         <div class="col-md-4">
           <div class="testblock">
-            <img src="images/testi-5.jpeg" align="center" height="100%" alt=".">
+            <img src="images/testi-11.jpeg"  width="100%" alt=".">
           </div>
           <!-- <div class="clientblock"> <img src="images/testimonial_1.png" alt=".">
             <p><strong>Johnathan Doe</strong> <br>
