--- a/landing/index.html
+++ b/landing/index.html
@@ -62,7 +62,7 @@
         <p><strong><em>Price may increase to ₦30,000 any time.</em></strong></p>
       </div>
       <div class="row">
-        <div class="col-md-12 text-center"> <a href="https://sprl.in/dgCpLyn" class="btn btn-warning btn-lg gototop">GET INSTANT ACCESS</a>
+        <div class="col-md-12 text-center"> <a href="https://tinyurl.com/3mja9p9r" class="btn btn-warning btn-lg gototop">GET INSTANT ACCESS</a>
         </div>
       </div>
     </div>
@@ -204,7 +204,7 @@
         <p><strong><em>Price may increase to ₦30,000 any time.</em></strong></p>
       </div>
       <div class="row">
-        <div class="col-md-12 text-center"> <a href="https://sprl.in/dgCpLyn" class="btn btn-warning btn-lg gototop">GET INSTANT ACCESS</a>
+        <div class="col-md-12 text-center"> <a href="https://tinyurl.com/3mja9p9r" class="btn btn-warning btn-lg gototop">GET INSTANT ACCESS</a>
         </div>
       </div>
     </div>
